# MeshCartographyLib

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  MeshCartography.cpp  README.md  bindings.cpp  generate_report.py  leli  main.cpp  mesh_cartographer.py  mesh_cartography.h
.github/workflows/: macOS.yml  ubuntu.yml  update_date.yml
cmake/: BuildTargets.cmake  Dependencies.cmake  ProjectConfig.cmake  Tests.cmake
dev/: MeshCuttingHelperInterface.h  MeshDefinition.h  SurfaceParametrizationHelperInterface.h
dev/GeodesicDistance/: AdaptedDijkstraDistanceHelper.cpp  AdaptedDijkstraDistanceHelper.cpp.md  AdaptedDijkstraDistanceHelper.h  CachedGeodesicDistanceHelper.cpp  CachedGeodesicDistanceHelper.cpp.md  CachedGeodesicDistanceHelper.h  CachedTessellationDistanceHelper.cpp  DijkstraDistanceHelper.h  HeatDistanceHelper.cpp  HeatDistanceHelper.cpp.md  HeatDistanceHelper.h  TessellationDistanceHelper.cpp  TessellationDistanceHelper.h
dev/IO/: IO.cpp.md  IO.h
dev/MeshCutting/: GaussianCutLineHelper.cpp  GaussianCutLineHelper.h  MeshCutHelper.cpp.md  MeshCutHelper.h
dev/MeshDefinition/: cgal.h
dev/MeshMetric/: AngleDistortionHelper.cpp  AngleDistortionHelper.cpp.md  AngleDistortionHelper.h  CurvatureCalculator.cpp  FaceDistortionHelper.cpp  FaceDistortionHelper.cpp.md  FaceDistortionHelper.h  LengthDistortionHelper.cpp  LengthDistortionHelper.cpp.md  LengthDistortionHelper.h
dev/Metric/: AngleDistortionHelper.cpp.md  CurvatureCalculator.h  FaceDistortionHelper.cpp.md  FaceDistortionHelper.h  LengthDistortionHelper.cpp.md  LengthDistortionHelper.h
dev/MonotileBorder/: HexagonBorderHelper.cpp  HexagonBorderHelper.cpp.md  HexagonBorderHelper.h  SpectreMonotileHelper.cpp  SpectreMonotileHelper.cpp.md  SpectreMonotileHelper.h  SquareBorderHelper.cpp  SquareBorderHelper.cpp.md  SquareBorderHelper.h
dev/SurfaceParametrization/: AutoDiffMonotileOptimizerHelper.cpp  AutoDiffMonotileOptimizerHelper.cpp.md  HarmonicParametrizationHelper.cpp  HarmonicParametrizationHelper.cpp.md  MeshRefinement.cpp  MeshRefinement.h  SurfaceParametrization.cpp  SurfaceParametrization.cpp.md  SurfaceParametrization.h  TessellationHelper.h
meshes/: ellipsoid_x4_open.off
src/: CachedGeodesicDistanceHelper.h  EuclideanTiling.cpp  EuclideanTiling.h  GeodesicDistance.cpp  GeodesicDistance.h  GeodesicDistanceHelperInterface.h  MeshCuttingHelperInterface.h  MeshDefinition.h  SurfaceParametrization.cpp  SurfaceParametrization.h  SurfaceParametrizationHelperInterface.h  VirtualMesh.h  lib.rs  main.rs
src/GeodesicDistance/: CachedGeodesicDistanceHelper.cpp  CachedGeodesicDistanceHelper.h  CachedTessellationDistanceHelper.cpp  CachedTessellationDistanceHelper.h  DijkstraDistanceHelper.cpp  DijkstraDistanceHelper.h  GeodesicDistance.cpp  GeodesicDistance.h  GeodesicDistanceHelper.cpp  GeodesicDistanceHelper.h  HeatDistanceHelper.cpp  HeatDistanceHelper.h  TessellationDistance.cpp  TessellationDistance.h  TessellationDistanceHelper.cpp  TessellationDistanceHelper.h
src/IO/: IO.cpp  IO.h  mod.rs
src/MeshCutting/: CutLineHelper.h  GaussianCutLineHelper.cpp  GaussianCutLineHelper.h  MeshCutHelper.cpp  MeshCutHelper.h
src/MeshMetric/: AngleDistortionHelper.cpp  AngleDistortionHelper.h  FaceDistortionHelper.cpp  FaceDistortionHelper.h  LengthDistortionHelper.cpp  LengthDistortionHelper.h
src/MonotileBorder/: HexagonBorderHelper.cpp  HexagonBorderHelper.h  SpectreMonotileBorderHelper.cpp  SpectreMonotileBorderHelper.h  SpectreMonotileHelper.cpp  SpectreMonotileHelper.h  SquareBorderHelper.cpp  SquareBorderHelper.h
src/SurfaceParametrization/: AutoDiffMonotileOptimizerHelper.cpp  AutoDiffMonotileOptimizerHelper.h  CutLineHelper.cpp  CutLineHelper.h  FreeBorderParametrizationHelper.cpp  FreeBorderParametrizationHelper.h  GaussianCutLineHelper.cpp  GaussianCutLineHelper.h  HarmonicParametrizationHelper.cpp  HarmonicParametrizationHelper.h  SquareBorderHelper.cpp  SquareBorderHelper.h  SquareBorderParametrizationHelper.cpp  SquareBorderParametrizationHelper.h  SurfaceParametrization.cpp  SurfaceParametrization.h  TessellationHelper.cpp  TessellationHelper.h  harmonic_parameterization_helper.rs  laplacian_matrix.rs
tests/: test_EuclideanTiling.cpp  test_GeodesicDistance.cpp  test_MeshMetric.cpp  test_SurfaceParametrization.cpp
versions/: baseline.json
