[package]
name = "new_king"
version = "0.1.0"
authors = ["Jan-Piotraschke <piotraschke.janniklas@gmail.com>"]
edition = "2021"

[lib]
name = "new_king_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
tobj = "4.0.0"
miette = "5.10.0"

[build-dependencies]
miette = { version = "5", features = ["fancy"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
